<resources>
    <string name="app_name">BlankBoard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">画板</string>
    <string name="color">颜色</string>
    <string name="color_selector">颜色选择</string>
    <string name="type_selector">画笔选择</string>
    <string name="eraser_selector">橡皮选择</string>
    <string name="stroke">画笔</string>
    <string name="save">保存</string>
    <string name="clear">清屏</string>
    <string name="save_success">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="eraser">橡皮擦</string>
</resources>
