<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/clear" android:title="@string/clear"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/save" android:title="@string/save"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/eraser" android:title="@string/eraser"
        android:orderInCategory="100" app:showAsAction="always"
        android:icon="@mipmap/ic_format_clear_white_24dp"
        />

    <item android:id="@+id/color" android:title="@string/color"
        android:orderInCategory="100" app:showAsAction="always"
        android:icon="@mipmap/ic_brush_white_24dp"
        />

    <item android:id="@+id/stroke" android:title="@string/stroke"
        android:orderInCategory="100" app:showAsAction="always"
        android:icon="@mipmap/ic_edit_white_24dp"
        />
</menu>
